add: VM options